--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
         "axios": "^0.18",
         "cross-env": "^5.1",
         "laravel-mix": "^4.0.7",
+        "laravel-mix-tailwind": "^0.1.0",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
-        "tailwindcss": "^1.0.0-beta.3",
+        "tailwindcss": "^0.7.4",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
     },
